<resources>
    <string name="app_name">Хочу помочь</string>

    <string name="splashScreen_tvLoading">Загрузка…</string>
    <string name="splashScreen_logo_description">Логотип Хочу помочь</string>
    <string name="splashScreen_logo_mss_description">Логотип СимбирСофт</string>

    <string name="bnv_title_news">Новости</string>
    <string name="bnv_title_search">Поиск</string>
    <string name="bnv_title_help">Помочь</string>
    <string name="bnv_title_history">История</string>
    <string name="bnv_title_profile">Профиль</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_edit_title">Редактировать</string>

    <string name="profile_toolbar_title">Профиль</string>
    <string name="profile_userName">Константинов Денис</string>
    <string name="profile_dateOfBirth">Дата рождения</string>
    <string name="profile_date">01 Февраля 1980</string>
    <string name="profile_title_fieldOfActivity">Сфера деятельности</string>
    <string name="profile_fieldOfActivity">Хирургия, травмотология</string>
    <string name="profile_receivePush">Получать push-уведомления</string>
    <string name="profile_title_yourFriends">Ваши друзья</string>
    <string name="profile_friend1">Дмитрий Валерьевич</string>
    <string name="profile_friend2">Евгений Александров</string>
    <string name="profile_friend3">Виктор Кузнецов</string>
    <string name="profile_logOut">Выйти из аккаунта</string>

    <string name="choose_photo">Выбрать фото</string>
    <string name="take_photo">Сделать снимок</string>
    <string name="delete">Удалить</string>

    <string name="help_toolbar_title">Помочь</string>
    <string name="help_tv_choose">Выберите категорию помощи</string>
    <string name="events_tv_keywords">Ключевые слова: мастер-класс, помощь</string>
    <string name="events_tv_searchingResults">Результаты поиска: 109 мероприятий</string>
    <string name="searchView_queryHint">Введите название организации</string>

    <string name="helpList_category_children">Дети</string>
    <string name="helpList_category_adults">Взрослые</string>
    <string name="helpList_category_elderly">Пожилые</string>
    <string name="helpList_category_animals">Животные</string>
    <string name="helpList_category_event">Мероприятия</string>

    <string name="pageTitle1">По мероприятиям</string>
    <string name="pageTitle2">По НКО</string>

    <string name="news_toolbar_title">Новости</string>
    <string name="action_filter_title">Фильтр</string>
    <string name="write_us"><u>Напишите нам</u></string>
    <string name="filters_tv_chooseCategory">Категории помощи</string>
    <string name="filters_tv_toolbar_title">Фильтр</string>
    <string name="newsDescription_tv_writeUs"><u>Перейти на сайт организации</u></string>
    <string name="newsDescription_tv_mail">У вас есть вопросы?</string>
    <string name="newsDescription_bottomButton1">Помочь\nвещами</string>
    <string name="newsDescription_bottomButton2">Стать\nволонтером</string>
    <string name="newsDescription_bottomButton3">Проф.\nпомощь</string>
    <string name="newsDescription_bottomButton4">Помочь\nденьгами</string>
    <string name="newsDescription_friends">+102</string>
    <string name="Left">Осталось</string>
    <string name="days">дней (</string>
    <string name="authorization_toolbar_title">Авторизация</string>
    <string name="ForgotPassword"><u>Забыли пароль?</u></string>
    <string name="singUp"><u>Регистрация</u></string>
    <string name="authorization_text1">Для участия в мероприятиях войдите\n в приложение через социальные сети</string>
    <string name="authorization_text2">Или авторизуйтесь через приложение</string>
    <string name="authorization_tv_email">E-mail</string>
    <string name="authorization_et_email_hint">Введите e-mail</string>
    <string name="authorization_tv_password">Пароль</string>
    <string name="authorization_et_password_hint">Введите пароль</string>
    <string name="authorization_btn_join">ВОЙТИ</string>
    <string name="plug_text1">Напишите в строке поиска название\n мероприятия или ключевые слова.</string>
    <string name="plug_text2">Например,</string>
    <string name="plug_text3"><u>мастер-класс, помощь</u></string>


</resources>
