<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bnv_news"
        android:icon="@drawable/ic_bnv_news_24dp"
        android:title="@string/bnv_title_news" />

    <item
        android:id="@+id/bnv_search"
        android:icon="@drawable/ic_bnv_search_24dp"
        android:title="@string/bnv_title_search" />

    <item
        android:id="@+id/bnv_help"
        android:icon="@drawable/ic_bnv_help_24dp"
        android:title="@string/bnv_title_help" />

    <item
        android:id="@+id/bnv_history"
        android:icon="@drawable/ic_bnv_history_24dp"
        android:title="@string/bnv_title_history" />

    <item
        android:id="@+id/bnv_profile"
        android:icon="@drawable/ic_bnv_profile_24dp"
        android:title="@string/bnv_title_profile" />

</menu>