<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/choose_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/choose_photo_marginStart"
        android:layout_marginTop="@dimen/choose_photo_marginTop"
        android:drawablePadding="@dimen/dialog_drawblePadding"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/choose_photo"
        android:textColor="@color/colorText"
        android:textSize="@dimen/text_22"
        app:drawableStartCompat="@drawable/ic_file_upload_black_24dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/take_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/take_photo_marginStart"
        android:layout_marginTop="@dimen/take_photo_marginTop"
        android:layout_marginEnd="@dimen/take_photo_marginEnd"
        android:drawablePadding="@dimen/dialog_drawblePadding"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/take_photo"
        android:textColor="@color/colorText"
        android:textSize="@dimen/text_22"
        app:drawableStartCompat="@drawable/ic_camera_alt_black_24dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/delete_marginStart"
        android:layout_marginTop="@dimen/delete_marginTop"
        android:layout_marginBottom="@dimen/delete_marginBotoom"
        android:drawablePadding="@dimen/dialog_drawblePadding"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/delete"
        android:textColor="@color/colorText"
        android:textSize="@dimen/text_22"
        app:drawableStartCompat="@drawable/ic_delete_forever_black_24dp" />


</LinearLayout>